# tng

./: CMakeLists.txt  bwlzh.c  bwt.c  coder.c  dict.c  fixpoint.c  fixpoint.h  huffman.c  huffmem.c  lz77.c  merge_sort.c  mtf.c  my64bit.h  rle.c  tng.c  tng_compress.c  vals16.c  warnmalloc.c  warnmalloc.h  widemuldiv.c  xtc2.c  xtc3.c
